--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-~ Copyright (c) 2013 Google Inc. All Rights Reserved.
-~
-~ Licensed under the Apache License, Version 2.0 (the "License"); you
-~ may not use this file except in compliance with the License. You may
-~ obtain a copy of the License at
-~
-~     http://www.apache.org/licenses/LICENSE-2.0
-~
-~ Unless required by applicable law or agreed to in writing, software
-~ distributed under the License is distributed on an "AS IS" BASIS,
-~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
-~ implied. See the License for the specific language governing
-~ permissions and limitations under the License.
--->
 <project>
   <modelVersion>4.0.0</modelVersion>
 
@@ -124,8 +109,6 @@
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>2.17</version>
         <configuration>
-          <configLocation>google_checks.xml</configLocation>
-          <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
           <consoleOutput>false</consoleOutput>
           <failOnViolation>true</failOnViolation>
           <violationSeverity>warning</violationSeverity>
@@ -133,9 +116,24 @@
         </configuration>
         <executions>
           <execution>
+            <id>default-cli</id>
             <goals>
               <goal>check</goal>
             </goals>
+            <configuration>
+              <configLocation>google_checks.xml</configLocation>
+              <suppressionsLocation>config/checkstyle-suppressions.xml</suppressionsLocation>
+            </configuration>
+          </execution>
+          <execution>
+            <id>header-check</id>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <configLocation>config/checkstyle-header.xml</configLocation>
+              <headerLocation>config/header-java.txt</headerLocation>
+            </configuration>
           </execution>
         </executions>
       </plugin>
