skip install in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ cache:
   directories:
    - $HOME/.m2
 
+# skip install
+install: true
+
 script: "
 if [ ${TRAVIS_PULL_REQUEST} = 'false' ] && [ ${TRAVIS_BRANCH} = 'master' ];
 then
