added integration tests using verifier plugin
add travis config for gcloud and auth

add AppVeyor for Windows integration testing

allow running on non-Java7

fix pluginDescriptor injection

ignore flaky appengine:run integration test

disable remote integration tests for pull requests

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,29 @@ cache:
   directories:
    - $HOME/.m2
 
-# skip install
-install: true
+install:
+  # download Cloud SDK
+  - wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-112.0.0-linux-x86_64.tar.gz
+  - tar -xzvf google-cloud-sdk-112.0.0-linux-x86_64.tar.gz
+  - export PATH=$PWD/google-cloud-sdk/bin:$PATH
+  - export CLOUDSDK_CORE_DISABLE_USAGE_REPORTING=true
+  # update all Cloud SDK components
+  - gcloud components update --quiet
+  # add App Eengine component to Cloud SDK
+  - gcloud components install app-engine-java --quiet
+  # decrypt the tavis-app-maven-plugin Cloud SDK project service account key
+  - openssl aes-256-cbc -K $encrypted_4c3a51657fee_key -iv $encrypted_4c3a51657fee_iv -in config/travis-app-maven-plugin-e1bb638f290e.json.enc -out config/travis-app-maven-plugin-e1bb638f290e.json -d
+  # set Cloud SDK CLI authentication
+  - gcloud auth activate-service-account --key-file config/travis-app-maven-plugin-e1bb638f290e.json
+  # set default project
+  - gcloud config set project travis-app-maven-plugin
 
 script: "
 if [ ${TRAVIS_PULL_REQUEST} = 'false' ] && [ ${TRAVIS_BRANCH} = 'master' ];
 then
-    mvn clean deploy --settings .travis/settings.xml -B -U;
+    travis_wait 30 mvn clean deploy --settings .travis/settings.xml -B -U -P include-remote-tests;
 else
-    mvn clean install -B -U;
+    travis_wait 30 mvn clean install -B -U;
 fi"
 
 env:
