--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.version>3.3.9</maven.version>
   </properties>
 
@@ -55,8 +56,8 @@
 
     <dependency>
       <groupId>com.google.cloud.tools</groupId>
-      <artifactId>app-tools-lib-for-java</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <artifactId>appengine-plugins-core</artifactId>
+      <version>0.1.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -79,9 +80,28 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-verifier</artifactId>
+      <version>1.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+      </testResource>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>projects/parent/pom.xml</include>
+        </includes>
+      </testResource>
+    </testResources>
+
     <plugins>
       <!-- Add "help" goal -->
       <plugin>
@@ -187,6 +207,50 @@
         </executions>
       </plugin>
 
+      <!-- Unit Testing -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <excludes>
+            <exclude>**/*IntegrationTest.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+
+      <!-- Integration Testing -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <includes>
+            <include>**/*IntegrationTest.java</include>
+          </includes>
+          <excludes>
+            <exclude>**/*DeployMojoIntegrationTest.java</exclude>
+          </excludes>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>include-remote-tests</id>
+      <properties>
+        <it.test>*IntegrationTest</it.test>
+      </properties>
+    </profile>
+  </profiles>
 </project>
