--- a/.travis.yml
+++ b/.travis.yml
@@ -16,20 +16,25 @@ install:
   - gcloud components update --quiet
   # add App Eengine component to Cloud SDK
   - gcloud components install app-engine-java --quiet
-  # decrypt the tavis-app-maven-plugin Cloud SDK project service account key
-  - openssl aes-256-cbc -K $encrypted_4c3a51657fee_key -iv $encrypted_4c3a51657fee_iv -in config/travis-app-maven-plugin-e1bb638f290e.json.enc -out config/travis-app-maven-plugin-e1bb638f290e.json -d
-  # set Cloud SDK CLI authentication
-  - gcloud auth activate-service-account --key-file config/travis-app-maven-plugin-e1bb638f290e.json
-  # set default project
-  - gcloud config set project travis-app-maven-plugin
+  # only run remote tests on master branch
+  - set doRemoteTests = [ $TRAVIS_PULL_REQUEST = 'false' ] && ( [ $TRAVIS_BRANCH = 'master' ] || [ $TRAVIS_BRANCH = 'integration_tests_fixes' ] )
+  - |
+    if $doRemoteTests; then
+      # decrypt the tavis-app-maven-plugin Cloud SDK project service account key
+      openssl aes-256-cbc -K $encrypted_4c3a51657fee_key -iv $encrypted_4c3a51657fee_iv -in config/travis-app-maven-plugin-e1bb638f290e.json.enc -out config/travis-app-maven-plugin-e1bb638f290e.json -d
+      # set Cloud SDK CLI authentication
+      gcloud auth activate-service-account --key-file config/travis-app-maven-plugin-e1bb638f290e.json
+      # set default project
+      gcloud config set project travis-app-maven-plugin
+    fi
 
-script: "
-if [ ${TRAVIS_PULL_REQUEST} = 'false' ] && ( [ ${TRAVIS_BRANCH} = 'master' ] || [ ${TRAVIS_BRANCH} = 'integration_tests_fixes' ] );
-then
-    mvn clean deploy --settings .travis/settings.xml -B -U -P include-remote-tests;
-else
-    mvn clean install -B -U;
-fi"
+script:
+  - |
+    if $doRemoteTests; then
+      mvn clean deploy --settings .travis/settings.xml -B -U -P include-remote-tests
+    else
+      mvn clean install -B -U
+    fi"
 
 env:
   global:
