--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
 script:
   - |
     if $INCLUDE_REMOTE_TESTS; then
-      mvn clean deploy --settings .travis/settings.xml -B -U -P include-remote-tests
+      travis_wait 30 mvn clean deploy --settings .travis/settings.xml -B -U -P include-remote-tests
     else
       mvn clean install -B -U
     fi
