Do codecov only for pull requests

--- a/pom.xml
+++ b/pom.xml
@@ -332,9 +332,14 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <excludes>
+            <exclude>**/*HelpMojo.java</exclude>
+          </excludes>
+        </configuration>
       </plugin>
     </plugins>
-    
+
   </build>
 
   <profiles>
