--- a/pom.xml
+++ b/pom.xml
@@ -185,14 +185,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.3</version>
+        <version>3.0.2</version>
       </plugin>
 
       <!-- Source files jar -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
+        <version>2.4</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -334,12 +334,11 @@
         </executions>
         <configuration>
           <excludes>
-            <exclude>**/*HelpMojo.java</exclude>
+            <exclude>**/*HelpMojo.*</exclude>
           </excludes>
         </configuration>
       </plugin>
     </plugins>
-
   </build>
 
   <profiles>
