Add GenRepoInfoFile integration test to ignore list.

--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,7 @@
           </includes>
           <excludes>
             <exclude>**/*DeployMojoIntegrationTest.java</exclude>
+            <exclude>**/*GenRepoInfoFileMojoIntegrationTest.java</exclude>
           </excludes>
         </configuration>
         <executions>
