--- a/appengine-maven-plugin-parent/pom.xml
+++ b/appengine-maven-plugin-parent/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.google.cloud.tools</groupId>
-    <artifactId>app-maven-plugin-parent</artifactId>
-    <version>1.2.2-SNAPSHOT</version>
+    <artifactId>appengine-maven-plugin-parent</artifactId>
+    <version>1.2.3-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -16,7 +16,6 @@
                 <plugin>
                     <groupId>com.google.cloud.tools</groupId>
                     <artifactId>appengine-maven-plugin</artifactId>
-                    <version>${appengine.maven.plugin}</version>
                     <executions>
                         <execution>
                             <phase>prepare-package</phase>
