--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
       <scope>test</scope>
     </dependency>
 
+	<dependency>
+	  <groupId>pl.pragmatists</groupId>
+	  <artifactId>JUnitParams</artifactId>
+	  <version>1.0.6</version>
+	  <scope>test</scope>
+	</dependency>
+
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
       <artifactId>maven-verifier</artifactId>
