--- a/kokoro/ubuntu_sign/release.cfg
+++ b/kokoro/ubuntu_sign/release.cfg
@@ -10,12 +10,9 @@ action {
   # These are files we want to save once the build is done.
   define_artifacts {
     regex: "**/bundle.jar"
+    regex: "**/appengine-maven-plugin-*.jar"
     regex: "**/appengine-maven-plugin-*.jar.asc"
-    regex: "**/appengine-maven-plugin-*.jar.md5"
-    regex: "**/appengine-maven-plugin-*.jar.sha1"
     regex: "**/appengine-maven-plugin-*.pom"
     regex: "**/appengine-maven-plugin-*.pom.asc"
-    regex: "**/appengine-maven-plugin-*.pom.md5"
-    regex: "**/appengine-maven-plugin-*.pom.sha1"
   }
 }
