Update pom.xml comment

--- a/pom.xml
+++ b/pom.xml
@@ -262,7 +262,7 @@
         </executions>
       </plugin>
 
-      <!-- Findbugs -->
+      <!-- SpotBugs -->
       <plugin>
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
