--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -18,6 +18,8 @@ jobs:
       CLOUDSDK_CORE_DISABLE_PROMPTS: true
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
