--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -12,6 +12,9 @@ jobs:
     name: Prepare release
     runs-on: ubuntu-latest
     steps:
+      - name: workaround for permissions
+        run: git config --global --add safe.directory /github/workspace
+        
       - name: Check out code
         uses: actions/checkout@v2.3.4
 
@@ -28,7 +31,6 @@ jobs:
 
       - name: Create tag for release and prepare branch for next development version
         run: |
-          git config --global --add safe.directory /github/workspace
           git checkout -b release-v${{ github.event.inputs.release_version }}
           git config user.email ${{ github.actor }}@users.noreply.github.com
           git config user.name ${{ github.actor }}
