--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 2
       - uses: actions/setup-java@v2
         with:
-          distribution: temurin
+          distribution: zulu
           java-version: ${{ matrix.java }}
       - uses: actions/cache@v2
         with:
